[package]
name = "kylin-ocw"
authors = ['Kylin <https://github.com/kylin-network>']
homepage = 'https://kylin.network'
license = 'Apache 2.0'
version = "2.0.0"
repository = "https://github.com/paritytech/substrate/"
description = "ocw module for fetch data"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false }
frame-support = { version = "2.0.0", default-features = false }
frame-system = { version = "2.0.0", default-features = false }
serde = { version = "1.0.101", optional = true }
sp-core = { version = "2.0.0", default-features = false }
sp-io = { version = "2.0.0", default-features = false }
sp-runtime = { version = "2.0.0", default-features = false }
sp-std = { version = "2.0.0", default-features = false }
lite-json = { version = "0.1", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"serde",
	"lite-json/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]
