[package]
name = 'kylin-ocw'
authors = ['Kylin <https://github.com/kylin-network>']
description = 'Pallet fetches data from external service and save to chain'
edition = '2018'
version = '3.0.0'
#
#[package.metadata.docs.rs]
#targets = ['x86_64-unknown-linux-gnu']
#
## alias "parity-scale-code" to "codec"
#[dependencies.codec]
#default-features = false
#features = ['derive']
#package = 'parity-scale-codec'
#version = '2.1.1'
#
#[dependencies]
#
#frame-support = { default-features = false, version = '3.0.0' }
#frame-system = { default-features = false, version = '3.0.0' }
#sp-std = { default-features = false, version = '3.0.0' }
#sp-core = { default-features = false, version = '3.0.0' }
#sp-io = { default-features = false, version = '3.0.0' }
#sp-runtime = { default-features = false, version = '3.0.0' }
#alt_serde = { version = "1", default-features = false, features = ["derive"] }
##serde_json = { version = "1", default-features = false, git = "https://github.com/Xanewok/json", branch = "no-std", features = ["alloc"] }
##serde-json-core = { version = "0.2.0", default-features = false}
#serde_json = { default-features = false, version = '1', features = ["alloc"] }
#
#[features]
#default = ['std']
#std = [
#    'codec/std',
#    'frame-support/std',
#    'frame-system/std',
#    'sp-std/std',
#    'sp-core/std',
#    'sp-io/std',
#    #    'serde-json-core/std',
#    #    'serde-json/std',
#    'sp-runtime/std',
#]
#
#
