[package]
authors = ['Kylin <https://github.com/kylin-network>']
description = "oracle for fetch data from datasource"
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Apache 2.0'
name = "kylin-oracle"
readme = 'README.md'
repository = "https://github.com/kylin-network/kylin-node"
version = '3.0.0'

[dependencies]
codec = { package = 'parity-scale-codec', default-features = false, features = ['derive'], version = '2.0.0' }
frame-benchmarking = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', default-features = false, optional = true, version = '3.0.0' }
frame-support = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', default-features = false, version = '3.0.0' }
frame-system = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', default-features = false, version = '3.0.0' }
serde = { version = "1.0.119", optional = true }
sp-core = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', default-features = false, version = '3.0.0' }
sp-keystore = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', default-features = false, optional = true, version = '0.9.0' }
sp-io = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', default-features = false, version = '3.0.0' }
sp-runtime = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', default-features = false, version = '3.0.0' }
sp-std = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', default-features = false, version = '3.0.0' }
lite-json = { version = "0.1", default-features = false }


[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking']
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"lite-json/std",
	"sp-core/std",
	"sp-io/std",
	"sp-keystore",
	"sp-runtime/std",
	"sp-std/std",
#	"log/std",

]

[dev-dependencies]
sp-runtime = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', default-features = false, version = '3.0.0' }

