[package]
name = "kylin-oracle"
authors = ['Kylin <https://github.com/kylin-network>']
description = "oracle for fetch data from datasource"
version = '3.0.0'
license = 'Apache 2.0'
homepage = 'https://substrate.dev'
repository = "https://github.com/kylin-network/kylin-node"
edition = '2018'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
parity-scale-codec = { version = "2.0.0", default-features = false, features = ["derive"] }
frame-benchmarking = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.2', default-features = false, optional = true }
frame-support = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.2', default-features = false }
frame-system = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.2', default-features = false }
lite-json = { version = "0.1", default-features = false }
sp-session = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.2', default-features = false }
sp-core = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.2', default-features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.2', default-features = false }
sp-io = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.2', default-features = false }
sp-std = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.2', default-features = false }


[dev-dependencies]
serde = { version = '1.0.119' }

sp-core = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.2', default-features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.2', default-features = false }
lite-json = { version = "0.1", default-features = false }


[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking']
std = [
	"parity-scale-codec/std",
	'frame-support/std',
	'frame-system/std',
	'frame-benchmarking/std',
	"lite-json/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	'sp-session/std',
	"sp-std/std",

]
