[package]
name = "kylin-oracle"
authors = ['Kylin <https://github.com/kylin-network>']
description = "oracle for fetch data from datasource"
version = '3.0.0'
license = 'Apache 2.0'
homepage = 'https://substrate.dev'
repository = "https://github.com/kylin-network/kylin-collator"
edition = '2018'
resolver = "2"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
frame-benchmarking = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.9', default-features = false, optional = true }
frame-support = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.9', default-features = false }
frame-system = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.9', default-features = false }
sp-core = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.9', default-features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.9', default-features = false }
sp-io = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.9', default-features = false }
sp-std = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.9', default-features = false }
cumulus-pallet-xcm = { git = "https://github.com/paritytech/cumulus", default-features = false, branch = "polkadot-v0.9.9" }
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", default-features = false, branch = "polkadot-v0.9.9" }
xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.9" }

[dev-dependencies]
serde = { version = "1.0.101" }
sp-core = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.9', default-features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.9' , default-features = false }
sp-io = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.9', default-features = false }
sp-keystore = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.9', default-features = false }
pallet-timestamp = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.9', default-features = false }
pallet-xcm = { git = 'https://github.com/paritytech/polkadot', branch = 'release-v0.9.9', default-features = false }
xcm-builder = { git = 'https://github.com/paritytech/polkadot', branch = 'release-v0.9.9', default-features = false }
xcm-executor = { git = 'https://github.com/paritytech/polkadot', branch = 'release-v0.9.9', default-features = false }


[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking']
std = [
	"codec/std",
	'frame-benchmarking/std',
	'frame-support/std',
	'frame-system/std',
	"sp-core/std",
	"sp-runtime/std",
	"sp-keystore/std",
	"sp-io/std",
	"sp-std/std",
	"cumulus-pallet-xcm/std",
	"cumulus-primitives-core/std",
	"xcm/std",
	"pallet-timestamp/std",
	"pallet-xcm/std",
	"xcm-builder/std",
	"xcm-executor/std",
]
